--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
 <!--
-	Verti by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	by HTML5 UP
+	or personal)
 -->
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>wang001's home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +19,8 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">Verti</a></h1>
-								<span>by HTML5 UP</span>
+								<h1><a href="index.html">深圳老王之家<br /><br />Since 2021<br /><br /></a></h1>
+								<span></span>
 							</div>
 
 						<!-- Nav -->
