--- a/index.html
+++ b/index.html
@@ -19,16 +19,15 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">深圳老王之家<br /><br />Since 2021<br /><br /></a></h1>
-								<span></span>
+								<h1><a href="index.html">深圳老王之家<font size="2",color=black> Since 2021</font><br/></a></h1>
+								<span></span>,
 							</div>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">Welcome</a></li>
+									<li class="current"><a href="index.html">主页</a></li>
 									<li>
-										<a href="#">Dropdown</a>
 										<ul>
 											<li><a href="#">Lorem ipsum dolor</a></li>
 											<li><a href="#">Magna phasellus</a></li>
@@ -44,9 +43,13 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
+									
+									<!-- 
+									这里是加入按钮和页面
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
+									 -->
 								</ul>
 							</nav>
 
@@ -129,7 +132,7 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
+										<h3>软件下载</h3>
 										<ul class="style2">
 											<li><a href="#">Etiam feugiat condimentum</a></li>
 											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
@@ -144,13 +147,9 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
+										<h3>作品浏览</h3>
 										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
+											<!--待加 <li><a href="#">建设中..</a></li> -->
 										</ul>
 									</section>
 
@@ -159,13 +158,9 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>Random Stuff</h3>
+										<h3>重要信息</h3>
 										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
+											<!--待加 <li><a href="#">Etiam feugiat condimentum</a></li> -->
 										</ul>
 									</section>
 
@@ -174,17 +169,11 @@
 
 								<!-- Contact -->
 									<section class="widget contact last">
-										<h3>Contact Us</h3>
-										<ul>
-											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-										</ul>
-										<p>1234 Fictional Road<br />
-										Nashville, TN 00000<br />
-										(800) 555-0000</p>
+										<h3>联系方式</h3>
+					
+										<p>825772667@qq.com<br />
+										http://w1238827.lofter.com/<br />
+										https://www.cnblogs.com/laowang001/</p>
 									</section>
 
 							</div>
@@ -193,7 +182,7 @@
 							<div class="col-12">
 								<div id="copyright">
 									<ul class="menu">
-										<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+										<li>&copy; All rights reserved</li><li>Design: <a href="http://w1238827.lofter.com/">wang001</a></li>
 									</ul>
 								</div>
 							</div>
