--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
 										<div class="inner">
 											<header>
 												<h2>Put something here</h2>
-												<p>Maybe here as well I think</p>
 											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+											<p>Phasellus quam turp.</p>
 										</div>
 									</section>
 
@@ -84,9 +83,8 @@
 										<div class="inner">
 											<header>
 												<h2>An interesting title</h2>
-												<p>This is also an interesting subtitle</p>
 											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+											<p>Phasellus quam .</p>
 										</div>
 									</section>
 
@@ -99,9 +97,8 @@
 										<div class="inner">
 											<header>
 												<h2>Oh, and finally ...</h2>
-												<p>Here's another intriguing subtitle</p>
 											</header>
-											<p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper amet bibendum tristique fringilla.</p>
+											<p>Phasellus quam turp</p>
 										</div>
 									</section>
 
@@ -134,11 +131,7 @@
 									<section class="widget links">
 										<h3>软件下载</h3>
 										<ul class="style2">
-											<li><a href="#">Etiam feugiat condimentum</a></li>
-											<li><a href="#">Aliquam imperdiet suscipit odio</a></li>
-											<li><a href="#">Sed porttitor cras in erat nec</a></li>
-											<li><a href="#">Felis varius pellentesque potenti</a></li>
-											<li><a href="#">Nullam scelerisque blandit leo</a></li>
+											<li><a href="/index222.html">本文本是一链接</a></li>
 										</ul>
 									</section>
 
