--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 				<div id="features-wrapper">
 					<div class="container">
 						<div class="row">
+							<!-- =================================================================== -->
 							<div class="col-4 col-12-medium">
 
 								<!-- Box -->
@@ -75,34 +76,15 @@
 									</section>
 
 							</div>
-							<div class="col-4 col-12-medium">
+							<!-- =================================================================== -->
 
-								<!-- Box -->
-									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
-												<h2>An interesting title</h2>
-											</header>
-											<p>Phasellus quam .</p>
-										</div>
-									</section>
+							<!-- =================================================================== -->							<div class="col-4 col-12-medium">
 
-							</div>
-							<div class="col-4 col-12-medium">
 
-								<!-- Box -->
-									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-										<div class="inner">
-											<header>
-												<h2>Oh, and finally ...</h2>
-											</header>
-											<p>Phasellus quam turp</p>
-										</div>
-									</section>
+							<!-- =================================================================== -->							<div class="col-4 col-12-medium">
 
-							</div>
+	
+							<!-- =================================================================== -->
 						</div>
 					</div>
 				</div>
@@ -163,10 +145,11 @@
 								<!-- Contact -->
 									<section class="widget contact last">
 										<h3>联系方式</h3>
-					
-										<p>825772667@qq.com<br />
-										http://w1238827.lofter.com/<br />
-										https://www.cnblogs.com/laowang001/</p>
+										<p>
+										<a href="http://w1238827.lofter.com/">163主页</a></br>
+										<a href="https://www.cnblogs.com/laowang001/">cnblog主页</a></br>
+										<a href=825772667@qq.com</a>825772667@qq.com</br>
+										</p>
 									</section>
 
 							</div>
