--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									
+									<!-- ====================================AAAAA=============================== -->
 									<!-- 
 									这里是加入按钮和页面
 									<li><a href="left-sidebar.html">Left Sidebar</a></li>
 									<li><a href="right-sidebar.html">Right Sidebar</a></li>
 									<li><a href="no-sidebar.html">No Sidebar</a></li>
 									 -->
+									 <!-- ====================================AAAAA=============================== -->
 								</ul>
 							</nav>
 
@@ -113,7 +114,7 @@
 									<section class="widget links">
 										<h3>软件下载</h3>
 										<ul class="style2">
-											<li><a href="/index222.html">本文本是一链接</a></li>
+											<li><a href="./balabala/balabala.html">balabala视频格式转换器</a></li>
 										</ul>
 									</section>
 
