--- a/balabala/balabala.html
+++ b/balabala/balabala.html
@@ -32,32 +32,32 @@
 							<!-- Content -->
 								<article>
 
-									<p>  本工具(balabala视频格式转换器)是一款优秀的格式转换工具，它可以批量将.m4s音视频文件转换为.mp4格式的文件。
+									<p>  本工具(balabala视频格式转换器)是一款优秀的格式转换工具，它可以批量将.m4s音视频文件转换为.mp4格式的文件。<br>
+									<br>
 它的使用非常简单：
-使用方法：
-1.点击按钮“打开包含.m4s的文件夹”
-2.选中文件夹，等待转换即可。
-
-1)转换完成之后，会在.m4s 上级目录处生成转换好的文件。
-2)选中“转换完成后删除源文件”，会在转换成mp4后删除原来的.m4s等文件。适合在电脑空间不多的情况下使用。
-
-提示：
-由于视频格式复杂，尤其是批量转换需要等待较长时间，这是正常情况。敬请根据自己的实际情况选择。
-
-说明：
-  本软件仅供娱乐，学习使用。切不可用于商业目的。保护知识产权，人人有责。
-作者：825772667@qq.com
+使用方法：<br>
+1.点击按钮“打开包含.m4s的文件夹”<br>
+2.选中文件夹，等待转换即可。<br>
+<br>
+1)转换完成之后，会在.m4s 上级目录处生成转换好的文件。<br>
+2)选中“转换完成后删除源文件”，会在转换成mp4后删除原来的.m4s等文件。适合在电脑空间不多的情况下使用。<br>
+<br>
+提示：<br>
+由于视频格式复杂，尤其是批量转换需要等待较长时间，这是正常情况。敬请根据自己的实际情况选择。<br>
+<br>
+说明：<br>
+  本软件仅供娱乐，学习使用。切不可用于商业目的。保护知识产权，人人有责。<br>
+作者：825772667@qq.com<br>
 <p>=====================================</p>
 
 balabala视频格式转换器下载链接1：
-链接：https://pan.baidu.com/s/1SLduz7U9EJXBkDgfGQ2v6Q 
-提取码：bala 
+<a href="https://pan.baidu.com/s/1g6zNA6okHl23CydQ5cKDaw">链接1</a></br>
+提取码：aaaa 
 
 <p>=====================================</p>
 
 balabala视频格式转换器下载链接2：
-https://cloud.189.cn/t/bEFnYzv6jqei
-
+<a href="https://cloud.189.cn/t/ziY7Fr2uYnua">链接2</a></br>
 <p>=====================================</p>
 </p>
 								</article>
