--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 									<section class="widget links">
 										<h3>作品浏览</h3>
 										<ul class="style2">
+											<li><a href="./xiaosha/xiumi/shizhongchun.html">【荔湾星主播】诗中春</a></li>
+											<li><a href="./xiaosha/xiumi/qiupuge15.html">【荔湾古诗文化小讲堂】王小莎讲《秋浦歌》之十五</a></li>
 											<!--待加 <li><a href="#">建设中..</a></li> -->
 										</ul>
 									</section>
