change the style of web site

--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
 					</header>
 				</div>
 
-
-
-
 			<!-- Footer -->
 				<div id="footer-wrapper">
 					<footer id="footer" class="container">
@@ -44,6 +41,7 @@
 											<li><a href="./balabala/balabala.html">balabala视频格式转换器</a></li>
 											<li><a href="./sysTime/sysTime.html">sysTime(系统时间)</a></li>
 											<li><a href="./03feedData/feedData.html">feedData_模拟数据生成器</a></li>
+											<li><a href="./04HKCam/HKCam.html">HKCam_海康摄像头控制端</a></li>
 										</ul>
 									</section>
 
@@ -52,10 +50,8 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>作品浏览</h3>
+										<h3>精品文章</h3>
 										<ul class="style2">
-											<li><a href="./xiaosha/xiumi/shizhongchun.html">【荔湾星主播】诗中春</a></li>
-											<li><a href="./xiaosha/xiumi/qiupuge15.html">【荔湾古诗文化小讲堂】王小莎讲《秋浦歌》之十五</a></li>
 											<!--待加 <li><a href="#">建设中..</a></li> -->
 										</ul>
 									</section>
@@ -65,10 +61,10 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>重要信息</h3>
+										<h3>作品展廊</h3>
 										<ul class="style2">
-											<li><a href="./xiaosha/03zuopingxiaosha/ZuoPing03.html">小莎个人作品展</a></li>
-											<li><a href="./jiakang/03zuopingJiakang/ZuoPing03.html">家康个人作品展</a></li>
+											<li><a href="./zzSystem/all.html">莎个人作品展</a></li>
+											<li><a href="./zzSystem/all.html">康个人作品展</a></li>
 											<!--待加 <li><a href="#">Etiam feugiat condimentum</a></li> -->
 										</ul>
 									</section>
