--- a/xiaosha/03zuopingxiaosha/ZuoPing03.html
+++ b/xiaosha/03zuopingxiaosha/ZuoPing03.html
@@ -69,19 +69,19 @@
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="images_zuoping/img-1.jpg" class="blog-img"><img src="images_zuoping/img-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="../xiumi/qiupuge15.html" class="blog-img"><img src="images_zuoping/img-1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">作品1</a></h3>
-								<p>敬请期待...</p>
+								<h3><a href="#">朗诵：《秋浦歌》之十五</a></h3>
+								<p> </p>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
-							<a href="#" class="blog-img"><img src="images_zuoping/img-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="../xiumi/shizhongchun.html" class="blog-img"><img src="images_zuoping/img-2.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">作品**</a></h3>
-								<p>敬请期待...</p>
+								<h3><a href="#">朗诵：《诗中春》</a></h3>
+								<p> </p>
 							</div>
 						</div>
 					</div>
