--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
 
 								<!-- Links -->
 									<section class="widget links">
+										<h3>开源工程</h3>
+										<ul class="style2">
+											<li><a href="https://github.com/terryshenzhen/processCheckAndKill">进程检测和杀进程工具-QT,C++</a></li>
+										</ul>
+									</section>
+
+							</div>
+							<div class="col-3 col-6-medium col-12-small">
+
+								<!-- Links -->
+									<section class="widget links">
 										<h3>精品文章</h3>
 										<ul class="style2">
 											<!--待加 <li><a href="#">建设中..</a></li> -->
@@ -78,7 +89,7 @@
 										<p>
 										<a href="http://w1238827.lofter.com/">163主页</a></br>
 										<a href="https://www.cnblogs.com/laowang001/">cnblog主页</a></br>
-										<a href=825772667@qq.com</a>825772667@qq.com</br>
+										</br>
 										</p>
 									</section>
 
@@ -88,7 +99,7 @@
 							<div class="col-12">
 								<div id="copyright">
 									<ul class="menu">
-										<li>&copy; All rights reserved</li><li>Design: <a href="http://w1238827.lofter.com/">wang001</a></li>
+										<li>&copy; All rights reserved</li><li>Design by: <a> 825772667@qq.com </a></li>
 									</ul>
 								</div>
 							</div>
