--- a/04HKCam/HKCam.html
+++ b/04HKCam/HKCam.html
@@ -76,8 +76,10 @@ HKCam_海康摄像头控制端下载链接2：
 <a href="https://cloud.189.cn/t/rABRZbiuq2Mf"><font size="13" color="blue">点击下载2</font></a></br>
 <p>=====================================</p>
 </p>
+<img src="./moveUI.gif"\/>
+<br>
 
-
+<img src="./APP_mainUI.jpg"\/>
 </font>
 								</article>
 
