--- a/balabala/balabala.html
+++ b/balabala/balabala.html
@@ -52,16 +52,79 @@
 <p>=====================================</p>
 
 balabala视频格式转换器下载链接1：
-<a href="https://pan.baidu.com/s/1g6zNA6okHl23CydQ5cKDaw"><font size="13" color="blue">点击下载1</font></a></br>
+<a href="https://pan.baidu.com/s/1jZbjXcrduY3UprCPK3NTLA"><font size="13" color="blue">点击下载1</font></a></br>
 提取码：aaaa 
 
 <p>=====================================</p>
 
 balabala视频格式转换器下载链接2：
-<a href="https://cloud.189.cn/t/ziY7Fr2uYnua"><font size="13" color="blue">点击下载2</font></a></br>
+<a href="https://cloud.189.cn/t/aeiuA3buQrAn"><font size="13" color="blue">点击下载2</font></a></br>
 <p>=====================================</p>
 </p>
-								
+
+
+
+
+
+
+<p>
+	使用指导视频：&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+</p>
+<p>
+	<ul>
+		<li>
+			<a href="https://www.xiaohongshu.com/discovery/item/61814ceb0000000001005217?xhsshare=CopyLink&appuid=5e5112b40000000001008b93&apptime=1636077161" target="_blank">https://www.xiaohongshu.com/discovery/item/61814ceb0000000001005217?xhsshare=CopyLink&amp;appuid=5e5112b40000000001008b93&amp;apptime=1636077161</a>
+		</li>
+		<li>
+			<a href="http://v.xiaohongshu.com/9b2d8b31441d84e9aaa4a623c141c8ceca28703d_r?sign=898d1df1934eb521964bb0c6a3ff4f38&amp;t=61816080" target="_blank">http://v.xiaohongshu.com/9b2d8b31441d84e9aaa4a623c141c8ceca28703d_r?sign=898d1df1934eb521964bb0c6a3ff4f38&amp;t=61816080</a>
+		</li>
+		<li>
+			<a href="http://v.xiaohongshu.com/eee67e965adaf42474e9ac226902b55aa6ba12b3_r?sign=e132e66d67fbdc3389dd01a91bc59e3c&amp;t=61816080" target="_blank">http://v.xiaohongshu.com/eee67e965adaf42474e9ac226902b55aa6ba12b3_r?sign=e132e66d67fbdc3389dd01a91bc59e3c&amp;t=61816080</a>
+		</li>
+	</ul>
+</p>
+<br />
+=====================================<br />
+
+版本修改记录：<br />
+V1.0及后续小版本：完成初始功能；<br />
+<br />
+V2.1此版本做了较多优化。速度更快，功能更强大。<br />
+<blockquote>
+	1.采用多线程方式，处理速度更快<br />
+2.提供文件列表显示<br />
+3.删除策略更新，程序更安全<br />
+4.提供时间评估<br />
+5.提供升级网站<br />
+6.修复某些奇怪的文件名不能转换的bug<br />
+7.提供视频教程<br />
+8.全新皮肤
+</blockquote>
+=====================================<br />
+<br />
+<br />
+关键词<br />
+<blockquote>
+	balabala balabala视频格式转换器 巴拉巴拉 巴拉巴拉视频格式转换器 视频格式转 .m4s .m4s转.mp4 m4s转mp4<br />
+.m4s文件合并为.mp4视频文件<br />
+m4s格式转换mp4<br />
+m4s格式<br />
+m4s file<br />
+.m4s file<br />
+.m4s format<br />
+m4s format
+</blockquote>
+<div>
+	<br />
+</div>
+
+
+
+<div>
+	<br />
+</div>
+
+<img src="./APP_mainUI.jpg"\/>
 								</font>
 								</article>
 
@@ -90,14 +153,6 @@ balabala视频格式转换器下载链接2：
 
 			</div>
 
-		<!-- Scripts -->
-
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
