--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<h1><a href="index.html">深圳老王家<font size="2",color=black> Since 2021</font><br/></a></h1>
+								<h1><a href="index.html">w001博客<font size="2",color=black>-----2021,聚焦桌面软件，上位机软件开发。专注C++, QT</font><br/></a></h1>
 							</div>
 
 						<!-- Nav -->
@@ -44,7 +44,7 @@
 											<li><a href="./04HKCam/HKCam.html">HKCam_海康摄像头控制端</a></li>
 											<li><a href="./05systemMonitor/systemMonitor.html">systemMonitor(磁盘空间监测工具)</a></li>
 											<li><a href="./06TubeDownloader/TubeDownloader.html">TubeDownloader(视频下载软件)</a></li>
-											
+											<li><a href="./000swDownload/001pdfReader/pdfReader.html">pdf文档阅读器</a></li>
 										</ul>
 									</section>
 
@@ -56,6 +56,11 @@
 										<h3>开源工程</h3>
 										<ul class="style2">
 											<li><a href="https://github.com/terryshenzhen/processCheckAndKill">进程检测和杀进程工具-QT,C++</a></li>
+											<li><a href="./000libsDownload/qwt/qwt.html">绘图库QWT</a></li>
+											<li><a href="./000swDownload/002temperature/temperature.html">温度采集上位机</a></li>
+											<li><a href="./000swDownload/003QMYSQL_stu/003QMYSQL_stu.html">QMYSQL数据库操作示例项目</a></li>
+											<li><a href="./000swDownload/004ledLight01/004ledLight01.html">QT界面圆形指示灯控件</a></li>
+											<li><a href="./000swDownload/005QSQLite/005QSQLite.html">QSQLite数据库应用示例：同时操作多个数据库文件</a></li>
 										</ul>
 									</section>
 
@@ -64,7 +69,9 @@
 
 								<!-- Links -->
 									<section class="widget links">
-										<h3>精品文章</h3>
+										<h3>精品文章/工具</h3>
+										<li><a href="./000ToolsDownload/innosetup/innosetup.html">exe打包工具innosetup</a></li>
+										<li><a href="./000ToolsDownload/QT_andtoos_version/QT_andtoos_version.html">QT，C++开发相关工具--系列</a></li>
 										<ul class="style2">
 											<!--待加 <li><a href="#">建设中..</a></li> -->
 										</ul>
@@ -92,6 +99,7 @@
 										<p>
 										<a href="http://w1238827.lofter.com/">163主页</a></br>
 										<a href="https://www.cnblogs.com/laowang001/">cnblog主页</a></br>
+										<a href="./00donate/donate.html">捐赠</a></br>
 										</br>
 										</p>
 									</section>
@@ -109,15 +117,6 @@
 						</div>
 					</footer>
 				</div>
-
-		<!-- Scripts -->
-
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
