--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 									<section class="widget contact last">
 										<h3>联系方式</h3>
 										<p>
+										<a href="https://blog.csdn.net/weixin_43577616?spm=1000.2115.3001.5343">csdn主页</a></br>
 										<a href="http://w1238827.lofter.com/">163主页</a></br>
 										<a href="https://www.cnblogs.com/laowang001/">cnblog主页</a></br>
 										<a href="./00donate/donate.html">捐赠</a></br>
